<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/Inicio"
            android:icon="@drawable/casa"
            android:title="Inicio"/>
        <item
            android:id="@+id/menu_listJugadores"
            android:icon="@drawable/ronaldo"
            android:title="@string/listJugadores"/>
        <item
            android:id="@+id/menu_miEquipo"
            android:icon="@drawable/ic_miequipo"
            android:title="Titulares"/>
        <item
            android:id="@+id/menu_miEquipoSuplentes"
            android:icon="@drawable/ic_miequipo"
            android:title="Suplentes"/>
        <item
            android:id="@+id/menu_equipo"
            android:icon="@drawable/alineacion"
            android:title="@string/listEquipos"/>
    </group>
    <item
        android:id="@+id/navigation_subheader"
        android:title="@string/extras">
        <menu>
            <item
                android:id="@+id/logout"
                android:icon="@android:drawable/ic_menu_directions"
                android:title="@string/LogOut"/>
        </menu>
    </item>
</menu>